--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "your-project-name",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://IT22601124.github.io/exmoo",
+  "homepage": "http://tharinduherath.me/exmoo",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
